# Fast-Parquet-Viewer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  loader.rs  main.rs  recent.rs  table.rs
