[package]
name = "parquet_viewer"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "FastParquetViewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default", "persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd"] }
rfd = "0.15"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
